Integrated with postgres db, added env file for auth config
