# docs/swagger.json
@@ -9,6 +9,70 @@
     "host": "localhost:8080",
     "basePath": "/api/v1",
     "paths": {
+        "/questions": {
+            "get": {
+                "description": "Get list of questions",
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "questions"
+                ],
+                "summary": "Get questions",
+                "responses": {
+                    "200": {
+                        "description": "Questions list response",
+                        "schema": {
+                            "type": "object",
+                            "additionalProperties": {
+                                "type": "array",
+                                "items": {
+                                    "$ref": "#/definitions/main.LeetCodeQuestions"
+                                }
+                            }
+                        }
+                    }
+                }
+            },
+            "post": {
+                "description": "Create a new question",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "questions"
+                ],
+                "summary": "Create question",
+                "parameters": [
+                    {
+                        "description": "Question object",
+                        "name": "question",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/main.LeetCodeQuestions"
+                        }
+                    }
+                ],
+                "responses": {
+                    "201": {
+                        "description": "Question created",
+                        "schema": {
+                            "$ref": "#/definitions/main.LeetCodeQuestions"
+                        }
+                    },
+                    "400": {
+                        "description": "Bad request",
+                        "schema": {
+                            "$ref": "#/definitions/main.ErrorResponse"
+                        }
+                    }
+                }
+            }
+        },
         "/users": {
             "get": {
                 "description": "Get list of users",
@@ -75,10 +139,49 @@
         }
     },
     "definitions": {
+        "main.Difficulty": {
+            "type": "string",
+            "enum": [
+                "Easy",
+                "Medium",
+                "Hard"
+            ],
+            "x-enum-varnames": [
+                "Easy",
+                "Medium",
+                "Hard"
+            ]
+        },
         "main.ErrorResponse": {
             "type": "object",
             "properties": {
                 "error": {
+                    "type": "string"
+                }
+            }
+        },
+        "main.LeetCodeQuestions": {
+            "type": "object",
+            "properties": {
+                "difficulty": {
+                    "$ref": "#/definitions/main.Difficulty"
+                },
+                "id": {
+                    "type": "string"
+                },
+                "lastCompletedTime": {
+                    "type": "string"
+                },
+                "name": {
+                    "type": "string"
+                },
+                "nextDueTime": {
+                    "type": "string"
+                },
+                "notes": {
+                    "type": "string"
+                },
+                "pattern": {
                     "type": "string"
                 }
             }
